[package]
name = "freshdns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json","blocking"] }
toml = "0.8.12"
serde = {version = "1.0.201", features = ["derive"]}
regex = "1.10.4"
serde_json = "1.0.117"